--- a/css/styles.css
+++ b/css/styles.css
@@ -6,11 +6,25 @@ img.displayed{
   display: block;
   margin-left: auto;
   margin-right: auto;
+  border-radius: 100px;
 }
 h3 {
   text-align: center;
   color:#3fdba8
 }
-#swim, #hot, #hike, #museum{
-  display: none;
+h4 {
+  text-align: center;
+  color:#ff4e50;
+}
+#swim, #hot, #hike, #museum {
+
+
+  }
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 600px;
+  height:400px;
+  border-radius: 100px
 }
